[package]
name = "tasks"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
chrono = "^0.4"
wasm-bindgen = "^0.2"
stdweb = "^0.4"
anyhow = "^1"
serde_json = "^1"
serde = "^1"

[dependencies.yew]
version = "^0.15"
package = "yew-stdweb"

[dependencies.yew-router]
version = "^0.11"
features = [
  "std_web"
]

[dependencies.plans]
path = "../../plans"

[dependencies.common]
path = "../common"
