[package]
name = "tasks"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
chrono = "^0.4"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
futures = "^0.3"
stdweb = "^0.4"
anyhow = "^1"
serde_json = "^1"
serde = "^1"
url = "^2"

[dependencies.wasm-bindgen]
version = "^0.2"
features = [
  'serde-serialize',
]
[dependencies.web-sys]
version = "^0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dependencies.rql]
path = "../../../rql"

[dependencies.yew]
version = "^0.15"
package = "yew-stdweb"

[dependencies.yew-router]
version = "^0.11"
features = [
  "std_web"
]

[dependencies.plans]
path = "../../plans"

[dependencies.common]
path = "../common"
