[package]
name = "seed_client"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
serde = "^1"
serde_json = "^1"
futures = "^0.3"
wasm-bindgen-futures = "^0.4"
url = "^2"
seed = "^0.7"
lazy_static = "^1.4"

[dependencies.wasm-bindgen]
version = "^0.2"
features = [
  'serde-serialize',
]
[dependencies.plans]
path = "../../../../../plans"

[dependencies.api]
path = "../../../../api"
