[package]
name = "rocket_server"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1.0"
rocket = "^0.4"
jsonwebtoken = "^5"
uuid = "^0.8"

[dependencies.rocket_contrib]
version = "^0.4"
default-features = false
features = [
  "json",
  "uuid",
]
[dependencies.api_test]
path = "../../../api_test"
